--- a/乙太坊文章.md
+++ b/乙太坊文章.md
@@ -33,4 +33,27 @@
   
 　　下面是一次交易的例子，用startGas為90為例：
 ![usingGas](usingGas.png)
-　　在交易開始時，發起者必須設定其發起資金(startGas × gasPrice)，並叫由第三方託管，而此筆交易在第三方託管的ETH量是：90*0.02μETH=1.8μETH
+　　在交易開始時，發起者必須設定其發起資金(startGas × gasPrice)，並叫由第三方託管，而此筆交易在第三方託管的ETH量是：90*0.02μETH=1.8μETH，這表示了這筆交易沒有完成，並且回歸到了一開始的狀況，改變的只有礦工得到了費用1.8μETH。
+
+***
+
+### **區塊中的Gas限制(Block gas limit)**
+　　對於一個區塊最多能夠容納多少交易，從startGas和交易最大消耗能源下去看待，我們會得到一個最大Gas限制，”Block gas limit”。
+　　這個Block gas limit是會變動的，而這是為了避免每個區塊會持續的無限增長，在乙太坊的協定就允許礦工用一些factor在其中調整1/1024的Gas限制。這個Gas限制也可以預防外部攻擊者用交易的無窮迴圈的方式去攻擊一個區塊。
+
+***
+### **高初始Gas的潛在延遲問題(Potential delays with high startGas)**
+　　為了防止Gas沒必要的消耗，大多人都會把Gas量提高到比每筆交易的需求還要多，那為何不要把Gas提升到幾百萬呢？
+　　假如有一筆400萬Gas的交易和100筆4萬Gas的交易，礦工會優先選擇後者的交易，假如400萬Gas的交易只有消耗100萬的Gas，礦工就會損失300萬Gas的潛在利益，因此礦工通常會選擇小型的交易，並且帶有充足量的startGas(除非初始Gas([intrinsic gas](https://ethereum.stackexchange.com/questions/1570/mist-what-does-intrinsic-gas-too-low-mean))很高)，這就是為何有些高startGas的交易會有相當高的延遲性。
+
+***
+### **繞道至交易所(Detour to Exchanges)**
+在乙太坊中主要有兩種帳號
+* 使用者帳號(用私鑰管理)
+* 合約(用程式控制)
+　　發送ETH到使用者的帳戶需要21000Gas的費用，但若用其他方式，例如發送到合約當中的消耗就更高了，這耗費取決於合約中的code和傳送數據，所以有些使用者想發送ETH到他們的合約錢包Ex:Mist(乙太坊錢包)，但只用了最基本的21000Gas量，交易就會因為Gas不足而退回。
+
+***
+
+### **結論**
+　　Gas是用來驅使這個世界電腦在乙太坊上做運算的能量來源，提供足夠的能量和需求的費用是不同的，保險起見用多一點的Gas去驅動交易是安全的，在乙太坊中Gas也是一個重要的存在。更多有關乙太交易方面的東西有[Gas量估算](https://github.com/ethereum/wiki/wiki/JavaScript-API#web3ethestimategas)、初始Gas、[Gas價格估算](https://github.com/ethereum/go-ethereum/wiki/Gas-Price-Oracle)、[交易封包大小的影響](https://ethereum.stackexchange.com/questions/1106/is-there-a-limit-for-transaction-size)。
